# MirrorCore

./: .env.example  .gitignore  :memory:  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: ai_provider.yaml  channels.yaml  memory.yaml  persona.yaml  proactive.yaml  safety.yaml  webchat.yaml
deploy/: mirror-core.service
docker/nginx/: mirror-core.conf
docs/: v5.2.md  v5.2任务安排.md  v5.2任务安排补充.md  v5.2详细设计.md
mirror_core/: __init__.py  bus.py  cli.py  scheduler.py
mirror_core/api/: __init__.py  chat.py  timezone.py
mirror_core/core/: __init__.py  context.py  decision.py  proactive.py  safety.py  state_machine.py
mirror_core/emotion/: __init__.py  engine.py
mirror_core/execution/: __init__.py  llm.py
mirror_core/execution/ai_providers/: __init__.py  anthropic_compat.py  (+3 more)
mirror_core/gateway/: __init__.py  auth.py  base.py  gateway.py  session.py
mirror_core/infrastructure/: __init__.py  config.py  database.py  exceptions.py  logging_config.py
mirror_core/memory/: __init__.py  engine.py
mirror_core/webchat/: index.html
skills/: README.md
skills/calming/: SKILL.md
skills/greeting/: SKILL.md
tests/: __init__.py  test_adapters.py  test_chat_history.py  test_cli.py  test_context.py  test_database.py  test_decision.py  test_emotes.py  test_emotion.py  test_event_bus.py  test_execution.py  test_gateway.py  test_infrastructure.py  test_integration.py  test_memory.py  test_perf_security.py  test_proactive.py  test_safety.py  test_scheduler.py  test_session.py  test_skills.py  test_state_machine.py
(+12 files in other folders)
